--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
       <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -30,8 +30,11 @@
         <img class="banner-profile" src="images/hardy.png" alt="">
       </div>  
     </header>
-    <main>
-
+    <main class="main">
+        <section class="about secondary-bg">
+            <h3 class="section-title">About me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata. </p>
+        </section>
     </main>
     <footer>
 
